<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add_new_item">Dodaj nowy element</string>
    <string name="category_name">Nazwa kategorii</string>
    <string name="task_title_required">Tytuł zadania (wymagany)</string>
    <string name="task_description_optional">Opis (opcjonalnie)</string>
    <string name="category">Kategoria</string>
    <string name="priority">Priorytet</string>
    <string name="select_deadline">Wybierz termin</string>
    <string name="save_task">Zapisz zadanie</string>
    <string name="new_category">Nowa kategoria</string>
    <string name="new_task">Nowe zadanie</string>
    <string-array name="priorities">
        <item>Niski</item>
        <item>Średni</item>
        <item>Wysoki</item>
    </string-array>
    <string name="expand_or_collapse">Rozwiń lub zwiń</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Ustawienia</string>
    <string name="theme_settings">Ustawienia motywu</string>
    <string name="light_theme">Jasny motyw</string>
    <string name="dark_theme">Ciemny motyw</string>
    <string name="system_theme">Motyw systemowy</string>
    <string name="restore_task">Przywróć zadanie</string>
    <string name="delete_task">Usuń zadanie</string>
    <string name="recurring_task">Zadanie cykliczne</string>
    <string name="recurrence_rule">Powtarzaj</string>
    <string-array name="recurrence_options">
        <item>Codziennie</item>
        <item>Co tydzień</item>
        <item>Co miesiąc</item>
    </string-array>
</resources>